--- a/about.html
+++ b/about.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>About</title>
   </head>
   <body>
+    <div id="container">
     <header>
-<a href="#maincontent" tabindex="-1">Skip to main content</a>
-      <h1>about me</h1>
 
+<a class="skiplink" href="#maincontent" tabindex="0">Skip to main content</a>
+      <h1>about me</h1>
       <nav>
         <ul>
           <li><a href="index.html">Index</a></li>
@@ -24,14 +25,15 @@
       </ul>
     </nav>
       </header>
-<main id="maincontent" tabindex="-1">
+<main id="maincontent">
     Hi! My name is Vivian. <br>
     (she / her / hers) <br><p>
     I'm currently a first year master's student concentrating on UI/UX Research & Design at the University of Michigan's School of Information. Though I have a bit of a non-traditional background (my undergraduate degree was in economics, and I minored in creative writing and poetry). I’ve discovered ways to connect my skills to this degree in order to augment my learning. In my work, my goal is to harness my love for poetry in order to design affective and intuitive experiences for users. Through my studies, I seek to better understand means of representing, organizing, and presenting information to reach a coherent truth through a framework of aesthetic experiences. </p>
     <p>
     My other interests include poetry, fiction, and literary criticism, film photography, Asian independent cinema, and playing around with music technology.</p>
     <p>Thanks for stopping by! (=^▽^=)</p>
-  </main>
+  </main></div>
+</div>
     <footer></footer>
   </body>
 </html>
