--- a/images.html
+++ b/images.html
@@ -2,14 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>Some images</title>
   </head>
   <body>
-    <a href="#maincontent" tabindex="-1">Skip to main content</a>
+    <div id="container">
+    <a class="skiplink" href="#maincontent" tabindex="0">Skip to main content</a>
     <header>
       <h1>some images</h1>
       <nav>
@@ -34,7 +35,7 @@
     <img src="images/10.jpg" alt="sign in norwegian"><br>
     <img src="images/11.jpg" alt="museum exhibit in shanghai"><br>
     <img src="images/12.jpg" alt="girl walking through art exhibit"><br>
-</main>
+</main></div>
   <footer></footer>
   </body>
 </html>
