--- a/practice1.html
+++ b/practice1.html
@@ -2,15 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
       <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>Practice 1</title>
   </head>
   <body>
+    <div id="container">
     <header>
-<a href="#maincontent" tabindex="-1">Skip to main content</a>
+<a class="skiplink" href="#maincontent" tabindex="0">Skip to main content</a>
       <h1>poem prompts 1</h1>
 
       <nav>
@@ -107,7 +108,7 @@ sliced through the air even
 before a second
 </p>
 </div>
-</main>
+</main></div>
   <footer></footer>
   </body>
 
