--- a/somepoems.html
+++ b/somepoems.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>Some poems</title>
   </head>
   <body>
-
+<div id="container">
     <header>
-<a href="#maincontent" tabindex="-1">Skip to main content</a>
+<a class="skiplink" href="#maincontent" tabindex="0">Skip to main content</a>
       <h1>some poems</h1>
 
       <nav>
@@ -76,7 +76,7 @@
   not healing, and I wonder how <br>
   his blood stays so still in the <br>
   water.
-</div></main>
+</div></main></div>
   <footer></footer>
   </body>
 </html>
