--- a/images.html
+++ b/images.html
@@ -22,20 +22,23 @@
           <li><a href="somepoems.html">Some poems</a></li>
           <li><a href="images.html" class="current">Some images</a></li>
       </ul></nav>
-<main id="maincontent" tabindex="-1">
-    <img src="images/01.jpg" alt="girl's hip on bed"><br>
-    <img src="images/02.jpg" alt="apartment buildings in shanghai"><br>
-    <img src="images/03.jpg" alt="oslo opera house at sunset"><br>
-    <img src="images/04.jpg" alt="close-up of leaf striation"><br>
-    <img src="images/05.jpg" alt="young flowers shop sign"><br>
-    <img src="images/06.jpg" alt="canvas drapes in window"><br>
-    <img src="images/07.jpg" alt="girl with bike in giverny"><br>
-    <img src="images/08.jpg" alt="raindrops on window"><br>
-    <img src="images/09.jpg" alt="close-up of wet leaves"><br>
-    <img src="images/10.jpg" alt="sign in norwegian"><br>
-    <img src="images/11.jpg" alt="museum exhibit in shanghai"><br>
-    <img src="images/12.jpg" alt="girl walking through art exhibit"><br>
-</main></div>
+<main id="maincontent">
+  <div id="gallery">
+    <img src="images/01.jpg" alt="girl's hip on bed">
+    <img src="images/02.jpg" alt="apartment buildings in shanghai">
+    <img src="images/03.jpg" alt="oslo opera house at sunset">
+    <img src="images/04.jpg" alt="close-up of leaf striation">
+    <img src="images/05.jpg" alt="young flowers shop sign">
+    <img src="images/06.jpg" alt="canvas drapes in window">
+    <img src="images/07.jpg" alt="girl with bike in giverny">
+    <img src="images/08.jpg" alt="raindrops on window">
+    <img src="images/09.jpg" alt="close-up of wet leaves">
+    <img src="images/10.jpg" alt="sign in norwegian">
+    <img src="images/11.jpg" alt="museum exhibit in shanghai">
+    <img src="images/12.jpg" alt="girl walking through art exhibit">
+  </div>
+</div>
+</main>
   <footer></footer>
   </body>
 </html>
