--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>About</title>
   </head>
-  <body>
+  <body class="bg-image">
     <div id="container">
     <header>
 
