images and font awesome

--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>About</title>
   </head>
-  <body class="bg-image">
+  <body class="bg-image" alt-text="punpun and aiko looking over a cliffside">
     <div id="container">
     <header>
 
@@ -32,6 +31,7 @@
     <p>
     My other interests include poetry, fiction, and literary criticism, film photography, Asian independent cinema, and playing around with music technology.</p>
     <p>Thanks for stopping by! (=^▽^=)</p>
+    <p><div class="credit-text">Background image from Oyasumi Punpun by Asano Inio. <a href="http://punpunetwork.tumblr.com/members" target="_blank">Source. <i class="fas fa-external-link-square-alt"></i></a>
   </main></div>
 </div>
     <footer></footer>
