--- a/images.html
+++ b/images.html
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>Some images</title>
@@ -23,7 +22,7 @@
           <li><a href="images.html" class="current">Some images</a></li>
       </ul></nav>
 <main id="maincontent">
-  <div id="gallery">
+  <div class="gallery">
     <img src="images/01.jpg" alt="girl's hip on bed">
     <img src="images/02.jpg" alt="apartment buildings in shanghai">
     <img src="images/03.jpg" alt="oslo opera house at sunset">
