--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>my very cool page</title>
@@ -12,7 +11,7 @@
     <div id="container">
     <header>
 <a class="skiplink" href="#maincontent" tabindex="-1">Skip to main content</a>
-      <h1>can't get any worse</h1>
+      <div class="fancy-title">can't get any worse</div>
 
       <nav>
         <ul>
