--- a/images.html
+++ b/images.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name = "viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
@@ -20,7 +21,7 @@
           <li><a href="practice1.html">Practice 1</a></li>
           <li><a href="somepoems.html">Some poems</a></li>
           <li><a href="images.html" class="current">Some images</a></li>
-      </ul></nav>
+      </ul></nav></header>
 <main id="maincontent">
   <div class="gallery">
     <img src="images/01.jpg" alt="girl's hip on bed">
