--- a/practice1.html
+++ b/practice1.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <meta name = "viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" type="text/css" href="css/html5reset.css">
       <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <title>Practice 1</title>
   </head>
