--- a/images.html
+++ b/images.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name = "viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name = "viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
