--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
     <header>
 <a class="skiplink" href="#maincontent" tabindex="-1">Skip to main content</a>
-      <div class="fancy-title">can't get any worse</div>
+      <h1>can't get any worse</h1>
 
       <nav>
         <ul>
